cmake_minimum_required(VERSION 3.13)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include(pico_sdk_import.cmake)
project(test_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(echo echo.cpp)
add_executable(transmit transmit.cpp transmitter.cpp)
add_executable(recieve recieve.cpp reciever.cpp)

pico_generate_pio_header(transmit ${CMAKE_CURRENT_LIST_DIR}/tx.pio)
pico_generate_pio_header(transmit ${CMAKE_CURRENT_LIST_DIR}/rx.pio)
pico_generate_pio_header(echo ${CMAKE_CURRENT_LIST_DIR}/tx.pio)
pico_generate_pio_header(recieve ${CMAKE_CURRENT_LIST_DIR}/rx.pio)
pico_enable_stdio_usb(echo 1)
pico_enable_stdio_uart(echo 0)
pico_enable_stdio_usb(transmit 1)
pico_enable_stdio_uart(transmit 0)
pico_enable_stdio_usb(recieve 1)
pico_enable_stdio_uart(recieve 0)

pico_add_extra_outputs(echo)
pico_add_extra_outputs(transmit)
pico_add_extra_outputs(recieve)
target_link_libraries(echo pico_stdlib hardware_pio hardware_dma)
target_link_libraries(transmit pico_stdlib hardware_pio hardware_dma)
target_link_libraries(recieve pico_stdlib hardware_pio hardware_dma)
