cmake_minimum_required(VERSION 3.13)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include(pico_sdk_import.cmake)
project(test_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(echo test.cpp)

pico_generate_pio_header(echo ${CMAKE_CURRENT_LIST_DIR}/rx.pio)
pico_enable_stdio_usb(echo 1)
pico_enable_stdio_uart(echo 0)
pico_add_extra_outputs(echo)
target_link_libraries(echo pico_stdlib hardware_pio hardware_dma)
